add seperate response model for /api/v1/exchange, update documentation files.
