# docs/api/openapi/exchange_rates.yaml
@@ -54,7 +54,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/ExchangeRateDTO'
+                  $ref: '#/components/schemas/CryptoExchangeRateDTO'
         default:
           description: Unexpected error
           content:
@@ -83,7 +83,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/ExchangeRateDTO'
+                  $ref: '#/components/schemas/GlobalExchangeRateDTO'
         default:
           description: Unexpected error
           content:
@@ -92,7 +92,7 @@ paths:
                 $ref: '#/components/schemas/ErrorDTO'
 components:
   schemas:
-    ExchangeRateDTO:
+    GlobalExchangeRateDTO:
       type: object
       properties:
         from:
@@ -105,6 +105,19 @@ components:
         - from
         - to
         - rate
+    CryptoExchangeRateDTO:
+      type: object
+      properties:
+        from:
+          type: string
+        to:
+          type: string
+        amount:
+          type: string
+      required:
+        - from
+        - to
+        - amount
     ErrorDTO:
       type: object
       properties:
