# internal/ports/openapi_types.go
@@ -3,14 +3,21 @@
 // Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.4.1 DO NOT EDIT.
 package ports
 
+// CryptoExchangeRateDTO defines model for CryptoExchangeRateDTO.
+type CryptoExchangeRateDTO struct {
+	Amount string `json:"amount"`
+	From   string `json:"from"`
+	To     string `json:"to"`
+}
+
 // ErrorDTO defines model for ErrorDTO.
 type ErrorDTO struct {
 	Code    string `json:"code"`
 	Message string `json:"message"`
 }
 
-// ExchangeRateDTO defines model for ExchangeRateDTO.
-type ExchangeRateDTO struct {
+// GlobalExchangeRateDTO defines model for GlobalExchangeRateDTO.
+type GlobalExchangeRateDTO struct {
 	From string `json:"from"`
 	Rate string `json:"rate"`
 	To   string `json:"to"`
